# turso_compat_issue_finder

./: .gitignore  PLAN.md  pyproject.toml
.cursor/skills/turso-compat-issue-draft/: SKILL.md  issue-template.md
.cursor/skills/turso-compat-issue-draft/scripts/: next-issue.sh
.githooks/: prepare-commit-msg
corpus/: compat_gaps.yaml  reproducers.yaml
corpus/fixtures/slt/: sample.test
corpus/manifest/: bird.jsonl  compat.jsonl  schemapile.jsonl  slt.jsonl  spider.jsonl
generate/: archive_util.py  bird.py  compat_gaps.py  corpus.py  expand.py  extract_corpus.py  reproducers.py  schemapile.py  spider.py  sqllogictest.py  sqltest.py
inventory/: checklist.py  compat_md.py  fetch_metadata.py  functions.py  github_issues.py  known_issues.py  known_issues.yaml  next_issue.py  retriage.py  run_checks.py  skip_list.yaml  triage.py
issues/: join-forward-reference-on.md
report/: discrepancies.csv  discrepancies.md
run/: cases.py  checklist.py  compare.py  config.py  exec.py  reporting.py  smoke.py  store.py
templates/: ddl.yaml  dml.yaml  pragma.yaml  schemas.yaml  select.yaml
